[package]
name = "plotcap"
version = "0.1.1"
edition = "2018"
license = "BSD-3-Clause"
authors = ["Simeon Miteff <simeon.miteff@corelight.com>" ]
readme = "README.md"
repository = "https://github.com/corelight/plotcap"
documentation = "https://docs.rs/plotcap"
description = "Plot packet and data rates over time given a PCAP file, with gnuplot."
keywords = ["pcap", "cli", "gnuplot"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
pcap-parser = "0.14"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "clock"] }
clap = { version = "3", features = ["cargo", "derive"] }
humantime = "2"
byte-unit = "4"
